--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+@import url("//hello.myfonts.net/count/2e98a4");
 /* line 5, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -69,11 +70,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 @font-face {
-  font-family: 'santelira';
-  src: url('../fonts/yellow_design_studio_-_santeliaroughalt-boldthr-webfont.eot');
-  src: url('../fonts/yellow_design_studio_-_santeliaroughalt-boldthr-webfont.eot?#iefix') format("embedded-opentype"), url('../fonts/yellow_design_studio_-_santeliaroughalt-boldthr-webfont.woff2?1435822276') format("woff2"), url('../fonts/yellow_design_studio_-_santeliaroughalt-boldthr-webfont.woff?1435822276') format("woff"), url('../fonts/yellow_design_studio_-_santeliaroughalt-boldthr-webfont.ttf?1435822276') format("truetype"), url('../fonts/yellow_design_studio_-_santeliaroughalt-boldthr-webfont.svg?1435822276#santeliarouch') format("svg");
-  font-weight: normal;
-  font-style: normal;
+  font-family: 'SantEliaRoughAlt-BoldThr';
+  src: url('../fonts/2E98A4_0_0.eot?1436093214');
+  src: url('../fonts/2E98A4_0_0.eot?&1436093214#iefix') format("embedded-opentype"), url('../fonts/2E98A4_0_0.woff2?1436093222') format("woff2"), url('../fonts/2E98A4_0_0.woff?1436093214') format("woff"), url('../fonts/2E98A4_0_0.ttf?1436093212') format("truetype");
 }
 /* line 2, ../../resources/assets/scss/core/_module.scss */
 div.module > .module-section {
@@ -174,21 +173,35 @@ div.module > .module-section .next-question svg path {
   width: 100%;
   height: 100%;
   visibility: hidden;
+  -webkit-font-smoothing: antialiased;
 }
-/* line 59, ../../resources/assets/scss/pages/_home.scss */
+/* line 60, ../../resources/assets/scss/pages/_home.scss */
 .questions .question .content {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate3d(-50%, -50%, 0);
+  transform: translate(-50%, -50%);
 }
-/* line 64, ../../resources/assets/scss/pages/_home.scss */
+/* line 65, ../../resources/assets/scss/pages/_home.scss */
 .questions .question .content h1 {
-  font-size: 20px;
+  font-size: 34px;
+  line-height: 50px;
   color: #252e33;
   text-align: center;
+  font-family: 'SantEliaRoughAlt-BoldThr', serif;
+  padding: 20px;
 }
-/* line 74, ../../resources/assets/scss/pages/_home.scss */
+/* line 73, ../../resources/assets/scss/pages/_home.scss */
+.questions .question .content p {
+  text-align: center;
+  font-size: 16px;
+  line-height: 24px;
+}
+/* line 78, ../../resources/assets/scss/pages/_home.scss */
+.questions .question .content .next-question {
+  margin: 60px auto 0 auto;
+}
+/* line 86, ../../resources/assets/scss/pages/_home.scss */
 .questions .question-nav {
   position: absolute;
   top: 50%;
@@ -197,24 +210,24 @@ div.module > .module-section .next-question svg path {
   font-size: 20px;
   z-index: 20;
 }
-/* line 81, ../../resources/assets/scss/pages/_home.scss */
+/* line 93, ../../resources/assets/scss/pages/_home.scss */
 .questions .question-nav li {
   cursor: pointer;
   padding: 5px;
 }
 
-/* line 88, ../../resources/assets/scss/pages/_home.scss */
+/* line 100, ../../resources/assets/scss/pages/_home.scss */
 .details {
   padding: 40px 40px;
 }
-/* line 91, ../../resources/assets/scss/pages/_home.scss */
+/* line 103, ../../resources/assets/scss/pages/_home.scss */
 .details > .inner {
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.9);
   overflow: hidden;
 }
-/* line 98, ../../resources/assets/scss/pages/_home.scss */
+/* line 110, ../../resources/assets/scss/pages/_home.scss */
 .details > .inner .content {
   width: 990px;
   margin: 0 auto;
@@ -224,8 +237,9 @@ div.module > .module-section .next-question svg path {
   padding: 20px 0;
 }
 
-/* line 112, ../../resources/assets/scss/pages/_home.scss */
+/* line 124, ../../resources/assets/scss/pages/_home.scss */
 body {
-  font-family: 'Open Sans','Helvetica Neue', sans-serif;
+  font-family: 'Roboto', 'Helvetica Neue', sans-serif;
   overflow-y: scroll;
+  color: #252e33;
 }
