--- a/resources/assets/scss/core/_fonts.scss
+++ b/resources/assets/scss/core/_fonts.scss
@@ -1,11 +1,4 @@
-@font-face {
-	font-family: 'santelira';
-	src: font-url('yellow_design_studio_-_santeliaroughalt-boldthr-webfont.eot');
-	src: font-url('yellow_design_studio_-_santeliaroughalt-boldthr-webfont.eot?#iefix') format('embedded-opentype'),
-	font-url('yellow_design_studio_-_santeliaroughalt-boldthr-webfont.woff2') format('woff2'),
-	font-url('yellow_design_studio_-_santeliaroughalt-boldthr-webfont.woff') format('woff'),
-	font-url('yellow_design_studio_-_santeliaroughalt-boldthr-webfont.ttf') format('truetype'),
-	font-url('yellow_design_studio_-_santeliaroughalt-boldthr-webfont.svg#santeliarouch') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
+@import url("//hello.myfonts.net/count/2e98a4");
+
+
+@font-face {font-family: 'SantEliaRoughAlt-BoldThr';src: font-url('2E98A4_0_0.eot');src: font-url('2E98A4_0_0.eot?#iefix') format('embedded-opentype'),font-url('2E98A4_0_0.woff2') format('woff2'),font-url('2E98A4_0_0.woff') format('woff'),font-url('2E98A4_0_0.ttf') format('truetype');}
