--- a/resources/assets/scss/core/_fonts.scss
+++ b/resources/assets/scss/core/_fonts.scss
@@ -2,3 +2,10 @@
 
 
 @font-face {font-family: 'SantEliaRoughAlt-BoldThr';src: font-url('2E98A4_0_0.eot');src: font-url('2E98A4_0_0.eot?#iefix') format('embedded-opentype'),font-url('2E98A4_0_0.woff2') format('woff2'),font-url('2E98A4_0_0.woff') format('woff'),font-url('2E98A4_0_0.ttf') format('truetype');}
+
+
+
+%brandon-grotesque {
+	font-family: "brandon-grotesque", Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
