--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -1,4 +1,4 @@
-div.module {
+.module {
 	> .module-section {
 		top: 0;
 		left: 0;
@@ -7,42 +7,39 @@ div.module {
 		height: 100%;
 		visibility: hidden;
 
-		.next-section {
-			display:block;
-			width: 50px;
-			height: 50px;
-			cursor:pointer;
-			position:absolute;
-			bottom: 20px;
-			left: 50%;
-			transform: translate3d(-50%, 0, 0);
-			z-index: 25;
-			visibility:hidden;
-			border: 0;
-			svg {
-				width: 100%;
-				height: 100%;
-				path {
-					fill: white;
-				}
-
-			}
+		> .inner {
+			display:flex;
+			align-items: center;
+			justify-content: center;
 		}
 
-		.next-question {
-			display:block;
-			width: 50px;
-			height: 50px;
-			cursor:pointer;
-			svg {
-				width: 100%;
-				height: 100%;
-				path {
-					fill: #f16060;
-				}
-			}
-		}
+
 
 	}
 
+}
+
+.next-section {
+	display:block;
+	width: 50px;
+	height: 50px;
+	cursor:pointer;
+	position:absolute;
+	left: 50%;
+	bottom: 20px;
+	transform: translate3d(-50%, 0, 0);
+	z-index: 25;
+	visibility:hidden;
+	border: 0;
+	transform-origin: 50% 50%;
+
+	svg {
+		width: 100%;
+		height: 100%;
+		path {
+			fill: white;
+			transition: fill 0.3s ease;
+		}
+
+	}
 }
