--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -18,3 +18,4 @@
 @import "pages/you-to-you/you-to-you";
 @import "pages/gratitude/gratitude";
 @import "pages/sustainable-change/sustainable-change";
+@import "forum/forum";
