--- a/resources/assets/scss/core/_fonts.scss
+++ b/resources/assets/scss/core/_fonts.scss
@@ -12,3 +12,159 @@
 %brandon-grotesque {
     font-family: "brandon-grotesque", Helvetica Neue, Helvetica, Arial, sans-serif;
 }
+
+@font-face {
+    font-family: 'icomoon';
+    src:url('../fonts/icomoon.eot?unlzf5');
+    src:url('../fonts/icomoon.eot?#iefixunlzf5') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?unlzf5') format('truetype'),
+        url('../fonts/icomoon.woff?unlzf5') format('woff'),
+        url('../fonts/icomoon.svg?unlzf5#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+// .icon-module-onboarding:before {
+//  content: "\e600";
+// }
+// .icon-module1:before {
+//  content: "\e601";
+// }
+// .icon-module2:before {
+//  content: "\e602";
+// }
+// .icon-module3:before {
+//  content: "\e603";
+// }
+// .icon-module4:before {
+//  content: "\e604";
+// }
+// .icon-module5:before {
+//  content: "\e605";
+// }
+// .icon-module6:before {
+//  content: "\e606";
+// }
+// .icon-module7:before {
+//  content: "\e607";
+// }
+// .icon-module8:before {
+//  content: "\e608";
+// }
+// .icon-menu_module-onboarding:before { 1
+//  content: "\e609";
+// }
+// .icon-menu_module1:before { 2
+//  content: "\e60a";
+// }
+// .icon-menu_module2:before { 3
+//  content: "\e60b";
+// }
+// .icon-menu_module3:before { 4
+//  content: "\e60c";
+// }
+// .icon-menu_module4:before { 5
+//  content: "\e60d";
+// }
+// .icon-menu_module5:before { 6
+//  content: "\e60e";
+// }
+// .icon-menu_module6:before { 7
+//  content: "\e60f";
+// }
+// .icon-menu_module7:before { 8
+//  content: "\e610";
+// }
+// .icon-menu_module8:before { 9
+//  content: "\e611";
+// }
+// .icon-about:before {
+//  content: "\e612";
+// }
+// .icon-account:before {
+//  content: "\e613";
+// }
+// .icon-arrow:before {
+//  content: "\e614";
+// }
+// .icon-camera:before {
+//  content: "\e615";
+// }
+// .icon-close:before {
+//  content: "\e616";
+// }
+// .icon-collapse:before {
+//  content: "\e617";
+// }
+// .icon-dashboard:before {
+//  content: "\e618";
+// }
+// .icon-download:before {
+//  content: "\e619";
+// }
+// .icon-edit:before {
+//  content: "\e61a";
+// }
+// .icon-expand:before {
+//  content: "\e61b";
+// }
+// .icon-validate-circle:before {
+//  content: "\e61c";
+// }
+// .icon-validate:before {
+//  content: "\e61d";
+// }
+// .icon-email:before {
+//  content: "\e61e";
+// }
+// .icon-facebook:before {
+//  content: "\e61f";
+// }
+// .icon-pinterest:before {
+//  content: "\e620";
+// }
+// .icon-locked:before {
+//  content: "\e621";
+// }
+// .icon-unlocked:before {
+//  content: "\e622";
+// }
+// .icon-module3-cat1:before {
+//  content: "\e623";
+// }
+// .icon-module3-cat2:before {
+//  content: "\e624";
+// }
+// .icon-module3-cat3:before {
+//  content: "\e625";
+// }
+// .icon-replied:before {
+//  content: "\e626";
+// }
+// .icon-terms-privacy:before {
+//  content: "\e627";
+// }
+// .icon-test-8modules:before {
+//  content: "\e628";
+// }
+// .icon-test-lauren:before {
+//  content: "\e629";
+// }
+// .icon-test-quote-close:before {
+//  content: "\e62a";
+// }
+// .icon-test-quote-open:before {
+//  content: "\e62b";
+// }
+// .icon-time-lifetime:before {
+//  content: "\e62c";
+// }
+// .icon-forum:before {
+//  content: "\e62d";
+// }
+// .icon-introduction:before {
+//  content: "\e62e";
+// }
+// .icon-upload-video:before {
+//  content: "\e62f";
+// }
