--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -3,19 +3,24 @@
 @import "compass";
 @import "breakpoint";
 
+// reset
+@import "core/reset";
+
 // core
-@import "core/settings";
+@import "core/settings"; // needs to be first.
+
 @import "core/base";
 @import "core/fonts";
 @import "core/forms";
+@import "core/helper";
 @import "core/links";
 @import "core/module";
 @import "core/typography";
 
 // ui elements
 @import "ui/burger";
-@import "ui/menu";
 @import "ui/buttons";
+@import "ui/menu";
 
 // pages
 @import "pages/home/home";
