--- a/resources/assets/scss/pages/home/_questions.scss
+++ b/resources/assets/scss/pages/home/_questions.scss
@@ -1,147 +1,139 @@
 .questions {
+    padding: 40px 40px;
+    > .inner {
+        overflow:hidden;
+    }
 
-	padding: 40px 40px;
-	> .inner {
+    .question {
+        position:absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        visibility: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-		overflow:hidden;
+        .content {
+            form {
+                position:relative;
+                display:inline-block;
+            }
 
+            p {
+                text-align:center;
+            }
 
-	}
+            .controls {
+                text-align:center;
 
-	.question {
-		position:absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		visibility: hidden;
-		display:flex;
-		align-items: center;
-		justify-content: center;
+                .age {
+                    font-size: 45px;
+                }
 
-		.content {
+                input[type=radio] {
+                    display:none;
+                    + label {
+                        position: relative;
+                        padding: 9px 0 0 42px;
+                        text-transform: uppercase;
+                        color: $lightRed;
+                        font-weight: 700;
+                        display: inline-block;
+                        margin: 0 30px;
+                        cursor: pointer;
 
-			form {
-				position:relative;
-				display:inline-block;
-				.parsley-errors-list {
-					position:absolute;
-					bottom: 2px;
-					right: 5px;
-					color:white;
-					font-size: 14px;
-				}
-			}
-			p {
-				text-align:center;
-				font-size: 17px;
-				line-height: 24px;
-			}
-			.controls {
-				text-align:center;
-				.age {
-					font-size: 45px;
-				}
+                        &:before, &:after {
+                            position:absolute;
+                            left: 0;
+                            top: 0;
+                        }
 
-				input[type=radio] {
-					display:none;
-					+ label {
-						position:relative;
-						padding-left: 40px;
-						text-transform: uppercase;
-						color: $lightRed;
-						font-weight: 700;
-						padding-top: 7px;
-						display:inline-block;
-						margin: 0 30px;
-						cursor:pointer;
-						&:before, &:after {
-							position:absolute;
-							left: 0;
-							top: 0;
-						}
-						&:after {
-							transform-origin: 50% 50%;
-							transform: scale(0, 0);
-							width: 18px;
-							height: 18px;
-							border-radius: 18px;
-							background: $lightRed;
-							top: 8px;
-							left: 8px;
-							content: "";
-							transition: transform 0.3s ease;
-						}
-						&:before {
-							content: "";
-							border: 4px solid $lightRed;
-							width: 26px;
-							height: 26px;
-							border-radius: 34px;
-						}
-					}
+                        &:after {
+                            transform-origin: 50% 50%;
+                            transform: scale(0, 0);
+                            width: 18px;
+                            height: 18px;
+                            border-radius: 18px;
+                            background: $lightRed;
+                            top: 8px;
+                            left: 8px;
+                            content: "";
+                            transition: transform 0.3s ease;
+                        }
 
-					&:checked {
-						+ label {
-							&:after {
-								transform: scale(1,1);
+                        &:before {
+                            content: "";
+                            border: 4px solid $lightRed;
+                            width: 26px;
+                            height: 26px;
+                            border-radius: 34px;
+                            padding: 13px;
+                        }
+                    }
 
-							}
-						}
+                    &:checked {
+                        + label {
+                            &:after {
+                                transform: scale(1,1);
 
-					}
+                            }
+                        }
 
-				}
+                    }
 
-			}
+                }
+
+            }
 
 
-		}
+        }
 
 
-		.next-question {
-			display:block;
-			width: 50px;
-			height: 50px;
-			position:absolute;
-			bottom: 60px;
-			left: 50%;
-			margin-left: -25px;
-			opacity: 0.2;
-			cursor:pointer;
-			svg {
-				width: 100%;
-				height: 100%;
-				path {
-					fill: $lightRed;
-					transition: fill 0.3s ease;
-				}
-			}
-			&:hover {
-				svg {
-					path {
-						fill: $darkRed;
-					}
-				}
-			}
-		}
+        .next-question {
+            display:block;
+            width: 50px;
+            height: 50px;
+            position:absolute;
+            bottom: 60px;
+            left: 50%;
+            margin-left: -25px;
+            opacity: 1;
+            cursor:pointer;
+            svg {
+                width: 100%;
+                height: 100%;
+                path {
+                    fill: $lightRed;
+                    transition: fill 0.3s ease;
+                }
+            }
+            &:hover {
+                svg {
+                    path {
+                        fill: $darkRed;
+                    }
+                }
+            }
+        }
 
-	}
+    }
 
-	.question-nav {
-		position:absolute;
-		top: 50%;
-		transform: translate3d(0, -50%, 0);
-		right: 30px;
-		font-size: 20px;
-		z-index: 20;
-		visibility: visible;
-	}
-	&.question-0 {
-		.question-nav {
-			visibility:hidden;
-		}
+    .question-nav {
+        position:absolute;
+        top: 50%;
+        transform: translate3d(0, -50%, 0);
+        right: 30px;
+        font-size: 20px;
+        z-index: 20;
+        visibility: visible;
+    }
+    &.question-0 {
+        .question-nav {
+            visibility:hidden;
+        }
 
 
-	}
+    }
 }
