--- a/resources/assets/scss/ui/_menu.scss
+++ b/resources/assets/scss/ui/_menu.scss
@@ -1,30 +1,147 @@
 .menu {
-	position:fixed;
-	z-index: 98;
-	height: 100%;
-	width: 295px;
-	background: $fontColour;
-	padding-top: 126px;
-	transform: translate3d(-295px, 0, 0);
-	overflow:auto;
-	display:none;
-	nav {
-		padding-left: 50px;
-		margin-bottom: 60px;
-		h2 {
-			font-weight: bold;
-			color: #aeaeae;
-			text-transform: uppercase;
-			margin-bottom: 33px;
-		}
+    position:fixed;
+    z-index: 98;
+    height: 100%;
+    width: 295px;
+    background: $fontColour;
+    padding-top: 126px;
+    transform: translate3d(-295px, 0, 0);
+    overflow:auto;
+    display:none;
 
-		ul {
+    nav {
+        padding-left: 50px;
+        margin-bottom: 60px;
 
-			li {
-				font-size: 15px;
-				color: #fbfbfb;
-				margin-bottom: 15px;
-			}
-		}
-	}
+        h2 {
+            font-weight: bold;
+            color: #aeaeae;
+            text-transform: uppercase;
+            margin-bottom: 33px;
+        }
+    }
+
+    ul {
+        li {
+            position: relative;
+            font-size: 15px;
+            color: #fbfbfb;
+            margin-bottom: 18px;
+            padding-left: 30px;
+
+            &:before {
+                $size: 15px;
+                content: '\e62e';
+                position: absolute;
+                font-family: 'icomoon';
+                font-size: $size;
+                width: $size;
+                height: $size;
+                left: 0;
+                top: -1px;
+            }
+
+            a {
+                color: $white;
+                border-bottom: 0;
+            }
+
+            &.ico-intro {
+                &:before {
+                    content: '\e62e';
+                }
+            }
+
+            &.ico-account {
+                &:before {
+                    content: '\e613';
+                }
+            }
+
+            &.ico-about {
+                &:before {
+                    content: '\e612';
+                }
+            }
+
+            &.ico-contact {
+                &:before {
+                    content: '\e62d';
+                }
+            }
+
+            &.ico-dash {
+                &:before {
+                    content: '\e618';
+                }
+            }
+
+            &.ico-terms {
+                &:before {
+                    content: '\e627';
+                }
+            }
+
+            &.ico-mod1 {
+                &:before {
+                    content: '\e609';
+                }
+            }
+
+            &.ico-mod2 {
+                &:before {
+                    content: '\e60b';
+                }
+            }
+
+            &.ico-mod3 {
+                &:before {
+                    content: '\e60c';
+                }
+            }
+
+            &.ico-mod4 {
+                &:before {
+                    content: '\e60d';
+                }
+            }
+
+            &.ico-mod5 {
+                &:before {
+                   content: '\e60e';
+                }
+            }
+
+            &.ico-mod6 {
+                &:before {
+                    content: '\e60f';
+                }
+            }
+
+            &.ico-mod7 {
+                &:before {
+                    content: '\e610';
+                }
+            }
+
+            &.ico-mod8 {
+                &:before {
+                    content: '\e611';
+                }
+            }
+
+            &.ico-mod9 {
+                &:before {
+                    content: '\e611';
+                }
+            }
+
+            // &.ico-mod10 {
+            //     &:before {
+            //         content: '\e613';
+            //     }
+            // }
+        }
+    }
+
 }
