--- a/resources/assets/scss/core/_forms.scss
+++ b/resources/assets/scss/core/_forms.scss
@@ -3,16 +3,16 @@ input[type=text],input[type=email], input[type=password], textarea {
     border: 0;
     display:block;
     @extend %brandon-grotesque;
-    color: white;
+    font-weight: 500;
+    color: $white;
     box-shadow: inset 0 0 1px 4px rgba($darkRed, 0.0);
     transition: background 0.2s ease;
     &:focus {
         outline: 0;
-        background: $fontColour;
     }
 }
-input[type=text], input[type=email], input[type=password] {
 
+input[type=text], input[type=email], input[type=password] {
     width: 250px;
     font-size: 17px;
     padding: 15px;
@@ -39,18 +39,20 @@ form .actions {
 input[type=radio] {
     display:none;
     + label {
-        position:relative;
+        position: relative;
         padding-left: 45px;
         color: $fontColour;
         padding-top: 3px;
         font-weight: normal;
-        display:inline-block;
-        cursor:pointer;
+        display: inline-block;
+        cursor: pointer;
+
         &:before, &:after {
             position:absolute;
             left: 0;
             top: 0;
         }
+
         &:after {
             transform-origin: 50% 50%;
             transform: scale(0, 0);
@@ -63,12 +65,14 @@ input[type=radio] {
             content: "";
             transition: transform 0.3s ease;
         }
+
         &:before {
             content: "";
             border: 4px solid $lightRed;
             width: 26px;
             height: 26px;
             border-radius: 34px;
+            padding: 13px;
         }
     }
 
@@ -77,12 +81,9 @@ input[type=radio] {
             font-weight:bold;
             &:after {
                 transform: scale(1,1);
-
             }
         }
-
     }
-
 }
 
 textarea {
@@ -99,6 +100,29 @@ textarea {
 
 .form-row {
     position:relative;
+
+    label {
+        position: absolute;
+        color: $white;
+        pointer-events: none;
+        left: 0;
+        right: 0;
+        top: 50%;
+        font-weight: 500;
+        color: whitesmoke;
+        transition: all 0.2s ease;
+        transform: translateY(-50%);
+    }
+
+    input:focus ~ label,
+    input.has-content ~ label {
+        top: 10px;
+        left: 6px;
+
+        right: inherit;
+        transform: scale(.85);
+    }
+
     .parsley-errors-list {
         position:absolute;
         left: 100%;
@@ -111,8 +135,9 @@ textarea {
         white-space: nowrap;
         margin-left: 20px;
         background: white;
-
+        font-size: 15px;
         display:none;
+
         &.filled {
             display:block;
         }
@@ -138,6 +163,7 @@ textarea {
             border-width: 9px;
             margin-top: -9px;
         }
+
         &:before {
             border-color: rgba(174, 174, 174, 0);
             border-right-color: #aeaeae;
