--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1450,8 +1450,9 @@ p.annotation {
   height: 100%;
   background: rgba(255, 255, 255, 0.95);
   z-index: 10;
+  visibility: hidden;
 }
-/* line 65, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 66, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .modal {
   position: absolute;
   top: 50%;
@@ -1465,13 +1466,14 @@ p.annotation {
   border-image: linear-gradient(23deg, rgba(37, 46, 51, 0.5) 0%, rgba(37, 46, 51, 0) 90%);
   border-image-slice: 1;
   color: #252e33;
+  visibility: hidden;
 }
-/* line 78, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 80, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .modal p {
   line-height: 26px;
   text-align: center;
 }
-/* line 82, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 84, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .modal .close {
   width: 38px;
   height: 38px;
@@ -1482,39 +1484,39 @@ p.annotation {
   padding: 12px;
   cursor: pointer;
 }
-/* line 91, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 93, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .modal .close svg {
   width: 100%;
   height: 100%;
 }
-/* line 94, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 96, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .modal .close svg path {
   fill: white;
 }
-/* line 101, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 103, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .row-4, .board .mid-row {
   padding: 20px 0;
 }
-/* line 104, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 106, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .row-4 {
   width: 862px;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
 }
-/* line 110, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 112, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .mid-row {
   display: flex;
   justify-content: space-between;
   width: 1085px;
 }
-/* line 114, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 116, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .mid-row .column {
   display: flex;
   width: 423px;
   justify-content: space-between;
 }
-/* line 121, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 123, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .image {
   width: 195px;
   height: 129px;
@@ -1523,27 +1525,41 @@ p.annotation {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
 }
-/* line 130, ../../resources/assets/scss/pages/visualise/_visualise.scss */
-.board .image.your-image {
+/* line 134, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+.board .image input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 999px;
+  opacity: 0;
+  cursor: pointer;
+}
+/* line 144, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+.board .image.image_main {
   transform-origin: 50% 50%;
   transform: scale(1.3, 1.3);
+  position: relative;
+  z-index: 2;
 }
-/* line 135, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 151, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .image img {
   width: 100%;
   height: 100%;
   display: none;
 }
-/* line 141, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 157, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .image.has-image img {
   display: block;
 }
-/* line 144, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 160, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .image.has-image .camera-icon {
   display: none;
 }
-/* line 149, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 165, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .image .camera-icon {
   width: 62px;
   height: 62px;
@@ -1551,17 +1567,17 @@ p.annotation {
   background: #f16060;
   padding: 17px;
 }
-/* line 155, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 171, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .image .camera-icon svg {
   width: 100%;
   height: 100%;
 }
-/* line 158, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 174, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .board .image .camera-icon svg path {
   fill: white;
 }
 
-/* line 166, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 182, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .social {
   position: relative;
   z-index: 20;
@@ -1569,8 +1585,9 @@ p.annotation {
   height: 17px;
   line-height: 17px;
   margin-top: 40px;
+  visibility: hidden;
 }
-/* line 173, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 190, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .social a {
   display: inline-block;
   font-size: 12px;
@@ -1581,15 +1598,15 @@ p.annotation {
   vertical-align: top;
   font-weight: normal;
 }
-/* line 183, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 200, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .social a:hover {
   color: #f16060;
 }
-/* line 186, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 203, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .social a:hover svg path {
   fill: #f16060;
 }
-/* line 191, ../../resources/assets/scss/pages/visualise/_visualise.scss */
+/* line 208, ../../resources/assets/scss/pages/visualise/_visualise.scss */
 .social a svg {
   height: 17px;
   display: inline-block;
