--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -61,6 +61,7 @@
 		height: 100%;
 		background: rgba(white, 0.95);
 		z-index: 10;
+		visibility: hidden;
 	}
 	.modal {
 		position:absolute;
@@ -75,6 +76,7 @@
 		border-image: linear-gradient(23deg, rgba($fontColour,.5) 0%, rgba($fontColour,0) 90%);
 		border-image-slice: 1;
 		color: $fontColour;
+		visibility: hidden;
 		p {
 			line-height: 26px;
 			text-align: center;
@@ -126,10 +128,24 @@
 		display:flex;
 		justify-content: center;
 		align-items: center;
+		position:relative;
+		overflow:hidden;
+		cursor:pointer;
+		input {
+			position: absolute;
+			top: 0;
+			left: 0;
+			font-size: 999px;
+			opacity: 0;
+			cursor:pointer;
 
-		&.your-image {
+		}
+
+		&.image_main {
 			transform-origin: 50% 50%;
 			transform: scale(1.3,1.3);
+			position:relative;
+			z-index: 2;
 		}
 
 		img {
@@ -170,6 +186,7 @@
 	height: 17px;
 	line-height: 17px;
 	margin-top: 40px;
+	visibility: hidden;
 	a {
 
 		display:inline-block;
